src/objects/saInquiryReply__c.object
<CustomObject>
    <fields>
        <fullName>Comment10__c</fullName>
        <label>Comment10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment11__c</fullName>
        <label>Comment11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment12__c</fullName>
        <label>Comment12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentAuthor10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommentAuthor10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saInquiryDetail_CommentAuthor10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentAuthor11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommentAuthor11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saInquiryDetail_CommentAuthor11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentAuthor12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommentAuthor12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saInquiryDetail_CommentAuthor12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountQuestionsReplied__c</fullName>
        <label>CountQuestionsReplied</label>
        <summaryForeignKey>saInquiryReplyDetail__c.saInquiryReply__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DailyReportDate__c</fullName>
        <description>For Daily Report application, for which day is the current Daily Report?</description>
        <label>日報日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InquiryValidFromDatetime__c</fullName>
        <formula>saInquiry__r.ValidFromDatetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InquiryValidFromDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InquiryValidFrom__c</fullName>
        <formula>saInquiry__r.ValidFrom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InquiryValidFrom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReplyDatetime__c</fullName>
        <label>ReplyDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the comment has been updated and that an email must be send</description>
        <label>SendCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>WAITING_REPLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_SAVED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_SENT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnicalFieldForEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TechnicalFieldForEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserReceiveEmail__c</fullName>
        <formula>User__r.SAReceiveEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserReceiveEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saInquiryReply_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>saBusinessLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>拠点</label>
        <referenceTo>saBusinessLocation__c</referenceTo>
        <relationshipLabel>問い合わせ返事</relationshipLabel>
        <relationshipName>saInquiryReply_saBusinessLocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>saInquiry__c</fullName>
        <label>問い合わせ</label>
        <referenceTo>saInquiry__c</referenceTo>
        <relationshipLabel>問い合わせ返事</relationshipLabel>
        <relationshipName>saInquiryReply_md</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>問い合わせ返事</label>
    <nameField>
        <displayFormat>INQR-{00000000}</displayFormat>
        <label>問い合わせ返事 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>